--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@
 .instructionsWrapper {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
   padding-right: 15px;
   width: 100%;
 }
@@ -176,6 +176,23 @@ button:disabled:hover {
   color:rgba(16, 16, 16, 0.3);
 }
 
+.backButtonAlign {
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
+.nextButtonAlign {
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px;
+}
+
+.backButton {
+  text-align: left;
+}
+
 body {
     font-family: 'Futura';
     background-color: rgb(255, 240, 242);
@@ -288,14 +305,14 @@ body {
   .imageColumn {
     float: left;
     overflow: hidden;
-    max-width:40%;
+    max-width:33%;
   }
 
   .columnPreview {
     float: left;
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 33%;
     row-gap: 20px;
     overflow: scroll;
   }
@@ -312,7 +329,6 @@ body {
     display: block;
     visibility: hidden;
     width:100%;
-    /* overflow: hidden; */
     position: absolute;
   }
 
@@ -376,12 +392,7 @@ body {
   }
 
   .goAwayAbout {
-    /* animation: smooth-appear 2s ease backwards;
-    animation-direction: reverse; */
-
     animation: smooth-disappear 2s ease forwards;
-
-    /* animation-fill-mode: backwards; */
   }
 
   .instructionSettingsButton {
@@ -556,6 +567,7 @@ body {
 
   .exitInfoPanel:hover {
     border: none;
+    background-color: #f1839d;
   }
 
   .imggg {
@@ -564,10 +576,10 @@ body {
 
   .instructionExits {
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     padding-left: 15 px;
-    align-items: flex-start;
-    align-self: flex-start;
+    align-items: flex-end;
+    align-self: flex-end;
     flex-direction: column;
   }
 
@@ -591,7 +603,6 @@ body {
   }
 
   .currentInstruction {
-    /* font-size: 40px; */
     animation: currentInstructionAnim 1s;
     animation-fill-mode: forwards;
     color:black;
@@ -599,7 +610,6 @@ body {
   }
 
   .nextInstruction {
-    /* font-size: 20 px; */
     animation: nextInstructionAnim 1s;
     animation-fill-mode: forwards;
     color:rgb(152, 152, 152);
