Scroll to Relevant Instruction Implemented

--- a/style.css
+++ b/style.css
@@ -425,6 +425,7 @@ body {
     color: white !important;
     min-height: 55vh;
     overflow: scroll;
+    padding: 40px;
   }
 
   .instructionsVisible {
