--- a/style.css
+++ b/style.css
@@ -56,20 +56,21 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items:center;
+  /* align-items:center; */
   padding-right: 15px;
   padding-left: 15px;
   width: 100%;
 }
 
 .instructionTitle {
-  padding-right: 75px;
+  /* padding-right: 75px; */
   font-size: 13px;
 }
 
 .settingsButton {
   text-align:right;
   align-self:flex-end;
+  flex-grow:0.333;
   border: none;
   width:30px;
   height:30px;
@@ -207,6 +208,7 @@ button:disabled:hover {
   display: flex;
   justify-content: flex-end;
   margin: 20px;
+  /* flex-grow:1; */
 }
 
 .backButton {
@@ -411,7 +413,9 @@ body {
   }
 
   .recipeTitle {
-    font-size: 15px;
+    font-size: 20px;
+    align-self:center;
+    font-weight:bold;
   }
 
   .goAwayAbout {
@@ -421,6 +425,7 @@ body {
 
   .instructionSettingsButton {
     border: none;
+    flex-grow:0.333;
     margin-right: 15px;
   }
 
@@ -609,6 +614,7 @@ body {
     margin-left: 15px;
     align-self: flex-start;
     flex-direction: column;
+    flex-grow:0.333;
   }
 
   .instructionExitsButtons {
@@ -758,10 +764,21 @@ body {
     min-height:10vh;
   }
 
+  .recipePreviewTitle {
+    align-self: center;
+    font-weight: bold;
+    font-size: 20px;
+  }
+
   .titleContainer {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center; */
+    align-self:center;
+    overflow:scroll;
+    flex-grow:0.333;
+    text-wrap:wrap;
+    /* justify-content: center; */
   }
 
   body {
