--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  /* align-items:center; */
+  align-items: center;
   padding-right: 15px;
   padding-left: 15px;
   width: 100%;
@@ -70,7 +70,6 @@
 .settingsButton {
   text-align:right;
   align-self:flex-end;
-  flex-grow:0.333;
   border: none;
   width:30px;
   height:30px;
@@ -208,7 +207,6 @@ button:disabled:hover {
   display: flex;
   justify-content: flex-end;
   margin: 20px;
-  /* flex-grow:1; */
 }
 
 .backButton {
@@ -249,6 +247,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    overflow: scroll;
   }
 
   .recipeSelectionTitle {
@@ -269,6 +268,7 @@ body {
     padding: 0px;
     /* max-height:fit-content */
     max-height: 100%;
+    height: 100%;
   }
 
   .backToHome {
@@ -291,7 +291,14 @@ body {
     margin-inline-start: 8px;
     margin-inline-end: 8px;
     margin-block-start: 8px;
-    height:100px;
+    margin-inline-end:8px;
+    /* height:100px; */
+    /* height: fit-content; */
+  }
+
+  .row:hover {
+    background-color: white;
+    cursor:pointer;
   }
 
   .column {
@@ -302,9 +309,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     column-gap: 10px;
-    margin-inline-start: 10px;
-    margin-inline-end: 10px;
-    margin-block-start: 10px;
+    margin: 10px;
   }
   
   .readMoreButton {
@@ -425,17 +430,19 @@ body {
 
   .instructionSettingsButton {
     border: none;
-    flex-grow:0.333;
+    flex:0.333;
     margin-right: 15px;
+    text-align:right;
   }
 
   .instructionSettingsButton:hover {
     border: none;
+    background-color: none;
   }
 
   .instructions {
     top: 15%;
-    max-height: 35vh;
+    max-height: 70%;
     width: 100%;
     visibility: hidden;
     overflow: visible;
@@ -453,7 +460,8 @@ body {
 
   .instructionsText {
     color: white !important;
-    min-height: 55vh;
+    height: 40%;
+    max-height: 55%;
     overflow: scroll;
     padding: 40px;
   }
@@ -614,7 +622,7 @@ body {
     margin-left: 15px;
     align-self: flex-start;
     flex-direction: column;
-    flex-grow:0.333;
+    flex:0.333;
   }
 
   .instructionExitsButtons {
@@ -740,8 +748,12 @@ body {
     font-size: 14px;
   }
 
-  .instructionTitle {
-    padding-right: 60px;
+  .instructionsText {
+    max-height: 50vh;
+  }
+
+  .recipeTitle {
+    max-width: 34vw;
   }
 
   .columnPreview {
@@ -771,12 +783,11 @@ body {
   }
 
   .titleContainer {
-    /* display: flex;
+    display: flex;
     flex-direction: column;
-    align-items: center; */
-    align-self:center;
-    overflow:scroll;
-    flex-grow:0.333;
+    align-items: center;
+    /* align-self:center; */
+    flex:0.333;
     text-wrap:wrap;
     /* justify-content: center; */
   }
