--- a/style.css
+++ b/style.css
@@ -299,6 +299,7 @@ body {
   .row:hover {
     background-color: white;
     cursor:pointer;
+    animation: highlightCard ease 0.5s forwards;
   }
 
   .column {
@@ -854,5 +855,14 @@ body {
   }
   100% {
     height: 7%;
+  }
+}
+
+@keyframes highlightCard {
+  0% {
+    transform: scale(1)
+  }
+  100% {
+    transform: scale(1.05)
   }
 }
