--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   visibility: visible;
   width:100%;
   overflow: hidden;
-  border-bottom: 5px solid black;
+  border-bottom: 5px solid #49274A;
   animation: animate 2s linear forwards;
 }
 
@@ -82,7 +82,7 @@
   width: 100%;
   text-align: center;
   margin-top: auto;
-  background-color: #f1839d;
+  background-color: #49274A;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -114,7 +114,8 @@
 }
 
 .aboutUsButton {
-  background-color: #f1839d;
+  color:#F8EFEA;
+  background-color: #49274A;
   border: none;
   font-family:'Futura';
   z-index: 1;
@@ -179,12 +180,13 @@ button {
   font-family: 'Futura';
   font-size: 15px;
   cursor: pointer;
+  color:#49274A;
 }
 
 button:hover {
-  color:white;
-  border: 1px solid black;
-  background-color: black;
+  color:#F4DECB;
+  border: 1px solid #49274A;
+  background-color: #49274A;
 }
 
 button:disabled {
@@ -222,7 +224,7 @@ button:disabled:hover {
 
 body {
     font-family: 'Futura';
-    background-color: rgb(255, 240, 242);
+    background-color: #F8EFEA;
     width:100%;
     height:100%;
     font-size: 16px;
@@ -232,6 +234,7 @@ body {
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    color: #49274A;
   }
 
   .opener {
@@ -289,9 +292,10 @@ body {
   .row {
     display: flex;
     flex-direction: row;
-    background-color: #fbcdd8;
-    color: #000;
-    border-radius: 5px;
+    background-color: #DED369;
+    color: #192F01;
+    border: solid #192F01 2px;
+    border-radius: 20px;
     font-size: 100%;
     width: 42%;
     column-gap: 0px;
@@ -299,12 +303,13 @@ body {
     margin-inline-end: 8px;
     margin-block-start: 8px;
     margin-inline-end:8px;
+    overflow: hidden;
     /* height:100px; */
     /* height: fit-content; */
   }
 
   .row:hover {
-    background-color: white;
+    background-color: #f2edc3;
     cursor:pointer;
     animation: highlightCard ease 0.5s forwards;
   }
@@ -315,7 +320,7 @@ body {
     display: flex;
     flex: 1 0 42%;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     column-gap: 10px;
     margin: 10px;
   }
@@ -342,7 +347,10 @@ body {
   }
 
   .imageColumn {
+    background-color: #DED369;
+    border-radius:20px;
     float: left;
+    margin:2px;
     overflow: hidden;
     text-wrap: wrap;
     max-width:33%;
@@ -350,9 +358,12 @@ body {
 
   .columnPreview {
     float: left;
+    background-color: #DED369;
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
     width: 33%;
+    margin:2px;
     row-gap: 20px;
     overflow: scroll;
     text-wrap:wrap;
@@ -562,13 +573,13 @@ body {
     width: 26px;
     left: 4px;
     bottom: 4px;
-    background-color: white;
+    background-color: #a9acc6;
     -webkit-transition: .4s;
     transition: .4s;
   }
   
   input:checked + .slider {
-    background-color: rgb(246, 127, 181);
+    background-color: #64766A;
   }
   
   input:focus + .slider {
@@ -590,9 +601,9 @@ body {
   }
 
   .informationPanel {
-    background-color:#f1839d;
-    border: 5px solid white;
-    border-radius: 4px;
+    background-color:#49274A;
+    border: 5px solid #DED369;
+    border-radius: 30px;
     width: 50%;
     display: flex;
     margin-left: 25%;
@@ -607,6 +618,7 @@ body {
     position:fixed;
     z-index: 1;
     padding-bottom: 3%;
+    overflow: hidden;
   }
 
   .balanceLine {
@@ -627,14 +639,16 @@ body {
     align-self: flex-start;
     font-family: 'Futura';
     border: none;
-    background-color:#f1839d;
+    background-color:#94618E;
     color: white;
     font-size: large;
+    overflow:hidden;
+    position:static;
   }
 
   .exitInfoPanel:hover {
     border: none;
-    background-color: #f1839d;
+    background-color: #F4DECB;
   }
 
   .imggg {
@@ -789,7 +803,7 @@ body {
 
   .wrapper{
     max-height:65vh;
-    overflow-y: scroll;
+    overflow: scroll;
   }
 
   .imageColumn {
