Changes from coaching sessioin

--- a/style.css
+++ b/style.css
@@ -364,6 +364,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: flex-start;
 }
 
 .rowPreview:after {
