--- a/style.css
+++ b/style.css
@@ -485,7 +485,8 @@ h3 {
   height: 40%;
   max-height: 55%;
   overflow: scroll;
-  padding: 40px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .instructionManipulation {
