--- a/style.css
+++ b/style.css
@@ -254,11 +254,6 @@ body {
   justify-content: space-between;
 }
 
-.hideTheOpener {
-  visibility: hidden;
-  display: flex;
-}
-
 .wrapper{
   width: 100%;
   text-align: center;
@@ -414,6 +409,7 @@ body {
 .alignPageInfo {
   display: flex;
   justify-content:space-evenly;
+  margin-top:5px;
 }
 
 .recipeSelectionScreenVisible {
@@ -431,6 +427,11 @@ h3 {
 
 .pageButtons:hover {
   color: white;
+}
+
+.pageButtons:hover:disabled {
+  background-color: #F8EFEA;
+  border-color: rgba(16, 16, 16, 0.3);
 }
 
 .miseOrientationButtons {
@@ -493,8 +494,7 @@ h3 {
 
 .instructionsText {
   color: white !important;
-  height: 40%;
-  max-height: 100%;
+  max-height: 65vh;
   overflow: scroll;
   padding-left: 40px;
   padding-right: 40px;
