--- a/style.css
+++ b/style.css
@@ -263,6 +263,7 @@ body {
   overflow: scroll;
   max-height: 65vh;
   padding-bottom: 10px;
+  padding-top: 5px;
 }
 
 .recipeSelectionTitle {
@@ -813,7 +814,7 @@ input:checked + .slider:before {
   }
 
   60% {
-    height: 106px;
+    height: 107px;
   }
 }
 
