--- a/style.css
+++ b/style.css
@@ -895,6 +895,10 @@ input:checked + .slider:before {
     margin-bottom:20%;
   }
 
+  .aboutUs {
+    margin: 20px;
+  }
+
   .aboutUsVisible {
     min-height: 10vh;
     animation: smooth-appear-mobile 2s ease forwards;
