Made some layout adjustments for mobile

--- a/style.css
+++ b/style.css
@@ -782,7 +782,7 @@ input:checked + .slider:before {
   }
 
   .row {
-    width: 90%;
+    width: 85%;
   }
 
   .homeButton {
@@ -838,7 +838,7 @@ input:checked + .slider:before {
   }
 
   .wrapper{
-    max-height:65vh;
+    max-height:55vh;
     overflow: scroll;
   }
 
@@ -883,8 +883,9 @@ input:checked + .slider:before {
   }
 
   .recipePreview {
+    top:15%;
     overflow: scroll !important;
-    max-height: 80vh;
+    max-height: 75vh;
   }
 
   .recipePreviewVisible {
