--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@ body {
 
 .rowPreview {
   width: 100%;
-  overflow: scroll !important;
+  overflow: scroll;
   max-height: 65vh;
   display: flex;
   flex-direction: row;
@@ -833,8 +833,8 @@ input:checked + .slider:before {
 
   .rowPreview {
     flex-wrap: wrap;
-    overflow: scroll;
-    max-height:55vh;
+    overflow: visible;
+    max-height: none;
   }
 
   .columnPreview {
@@ -890,7 +890,7 @@ input:checked + .slider:before {
   .recipePreview {
     top:15%;
     overflow: scroll !important;
-    max-height: 70vh;
+    max-height: 65vh;
   }
 
   .recipePreviewVisible {
